fix: configure upstream fetch refspec properly

--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -39,8 +39,10 @@ jobs:
       - name: Fetch upstream
         run: |
           git remote add upstream https://github.com/rikkahub/rikkahub.git || true
-          # 获取 upstream master 分支和 tags（忽略 tag 冲突）
-          git fetch upstream +refs/heads/master:refs/remotes/upstream/master --tags 2>&1 || true
+          # 配置 fetch refspec 以创建追踪分支
+          git config remote.upstream.fetch "+refs/heads/*:refs/remotes/upstream/*"
+          # 获取 upstream 分支和 tags（忽略 tag 冲突）
+          git fetch upstream --tags 2>&1 || true
           echo "=== Upstream master ===" 
           git log --oneline -1 upstream/master
 
