--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -2,8 +2,8 @@ name: Sync Fork
 
 on:
   schedule:
-    # 每 10 分钟检查 upstream 更新（用于测试/调试）
-    - cron: '*/10 * * * *'
+    # 每天北京时间 15:30（UTC 07:30）检查 upstream 更新
+    - cron: '30 7 * * *'
   workflow_dispatch:
 
 permissions:
