--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -166,6 +166,8 @@ jobs:
               ref: 'master',
               inputs: {
                 release_type: 'release'
+                ,
+                build_universal: 'false'
               }
             });
             
